# DESeq2Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
datademo/: counts.csv  metadata.csv
deseq2_agent/: __init__.py  config.py  models.py  pipeline.py  prompts.py  runner.py
deseq2_agent/agents/: __init__.py  base.py  de_agent.py  design_agent.py  pathway_agent.py  qc_agent.py  report_agent.py
deseq2_agent/report/: __init__.py  html_builder.py
deseq2_agent/report/templates/: report.html.jinja2
examples/: run_pipeline.py
r_scripts/: 01_data_prep.R  02_qc_analysis.R  03_de_analysis.R  04_enrichment.R  05_edger_sensitivity.R
results/: TreatmentvsControl_results.csv  TreatmentvsControl_sig_down.csv  TreatmentvsControl_sig_up.csv  config.json  counts_ensembl.csv  data_prep_summary.json  dds.rds  de_summary.json  enrichment_results_TreatmentvsControl.json  id_mapping.csv  qc_metrics.json  report.html
tests/: smoke_test.py  test_runnable_protocol.py
